<resources>
    <string name="app_name">CookieMusic</string>
    <string name="no_music">无音乐</string>

    <!--设置-->
    <string name="menu_setting">功能设置</string>
    <string name="menu_share">推荐给朋友</string>
    <string name="menu_about">关于曲奇音乐</string>
    <string name="menu_night">夜间模式</string>
    <string name="menu_timer">定时停止播放</string>
    <string name="menu_exit">退出应用</string>

    <string name="local_music">本地音乐</string>
    <string name="online_music">在线音乐</string>
    <string name="scanning">正在扫描…</string>
    <string name="music_name">歌曲</string>
    <string name="music_info">歌手 - 专辑</string>
    <string name="share">分享</string>

    <string name="delete_music">删除%s？</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="music_not_exist">%s不存在</string>
    <string name="set_ringstone_success">设置成功</string>

    <string name="music_details_music">歌曲：</string>
    <string name="music_details_file_name">文件名称：</string>
    <string name="music_details_music_duration">播放时长：</string>
    <string name="music_details_music_quality">文件音质：</string>
    <string name="music_details_music_size">文件大小：</string>
    <string name="music_details_music_path">文件路径：</string>
    <string name="music_delete_failed">删除文件失败，请检查权限：</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="my">我的</string>
    <string name="find">发现</string>
    <string name="cloud">云村</string>
    <string name="video">视频</string>

    <string name="protocol_content">"欢迎使用网易云音乐！

在您使用网易云音乐前，请您认真阅读并了解《服务条款》和《隐私政策》。

如您未满14周岁，您还需通知您的监护人共同阅读《儿童隐私政策》，点击“同意”即表示您和您的监护人已阅读并同意全部条款。"</string>
    <string name="terms_of_service">《服务条款》</string>
    <string name="privacy_policy">《隐私政策》</string>
    <string name="user_policy">《用户协议》</string>
    <string name="child_privacy_policy">《儿童隐私政策》</string>
    <string name="terms_of_service_title">服务条款和隐私政策提示</string>
    <string name="agree">同意</string>
    <string name="disagree">不同意并退出APP>></string>
    <string name="agree_policy">同意《用户协议》《隐私政策》《儿童隐私政策》</string>

    <string name="login_phone">手机号登陆</string>
    <string name="enter_now">立即体验</string>
    <string name="agree_tips">请勾选同意《用户协议》《隐私政策》和《儿童隐私政策》</string>
    <string name="phone_login_tips">未注册手机号登录后将自动创建账号</string>
    <string name="phone_login">手机号登录</string>
    <string name="phone_verify">手机号验证</string>
    <string name="phone_register">手机号注册</string>
    <string name="phone_is_invalid">手机号不合法</string>
    <string name="next_step">下一步</string>
    <string name="please_input_phone_number">+86 请输入手机号</string>
    <string name="please_input_password">设置登陆密码，不少于6位</string>
    <string name="msg_code_has_sent">短信验证码已发送至</string>
    <string name="sent_again">重新发送</string>

</resources>
