<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:orientation="vertical">

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/phoneLoginTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_login_tips" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_40"
        android:layout_marginTop="@dimen/space_15"
        android:hint="@string/please_input_phone_number"
        android:textSize="@dimen/text_size_16" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_45"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/space_16"
        android:layout_marginTop="@dimen/space_30"
        android:layout_marginEnd="@dimen/space_16"
        android:background="@drawable/shape_btn_bg"
        android:gravity="center"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16" />
</LinearLayout>