<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_round_radius_dialog"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/space_16"
        android:paddingBottom="@dimen/space_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_10"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/terms_of_service_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:id="@+id/tv_privacy_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_10"
            android:layout_marginTop="@dimen/space_15"
            android:layout_marginEnd="@dimen/space_10"
            android:text="@string/protocol_content" />

        <TextView
            android:id="@+id/tv_agree"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/space_16"
            android:layout_marginTop="@dimen/space_16"
            android:layout_marginEnd="@dimen/space_16"
            android:background="@drawable/shape_btn_agree_bg"
            android:gravity="center"
            android:text="@string/agree"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:id="@+id/tv_disagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_16"
            android:layout_marginBottom="@dimen/space_10"
            android:text="@string/disagree"
            android:textColor="@color/color_ff507daf"
            android:textSize="@dimen/text_size_13" />
    </LinearLayout>

</FrameLayout>