<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/shape_music_details_bg"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_details_music"
            android:textColor="@color/color_music_details_content"/>

        <TextView
            android:id="@+id/tv_music_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_music_details_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_details_file_name"
            android:textColor="@color/color_music_details_title"/>

        <TextView
            android:id="@+id/tv_music_details_file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_music_details_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_details_music_duration"
            android:textColor="@color/color_music_details_title"/>

        <TextView
            android:id="@+id/tv_music_details_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_music_details_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_details_music_quality"
            android:textColor="@color/color_music_details_title"/>

        <TextView
            android:id="@+id/tv_music_details_music_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_music_details_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_details_music_size"
            android:textColor="@color/color_music_details_title"/>

        <TextView
            android:id="@+id/tv_music_details_music_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_music_details_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_details_music_path"
            android:textColor="@color/color_music_details_title"/>

        <TextView
            android:id="@+id/tv_music_details_music_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@color/color_music_details_content"/>
    </LinearLayout>
</LinearLayout>